--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -1,32 +1,77 @@
-.preloader-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+/* ShimmerCard.css */
+
+.shimmer-card {
+  width: 250px;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  margin: 10px;
+  padding: 10px;
+  background-color: #fff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  animation: shimmer 3s linear infinite;
+}
+
+.shimmer-card-image {
+  width: 100%;
+  height: 150px;
+  background: linear-gradient(-45deg, #ccc, #eee, #ccc, #eee);
+ /* Shimmering effect gradient */
+  background-size: 400% 400%;
+  border-radius: 8px 8px 0 0;
+  animation: shimmer 3s linear infinite;
+}
+
+
+
+.shimmer-line {
+  height: 10px;
+  margin: 8px 0;
+  width: 80%;
+  background: linear-gradient(-45deg, #ccc, #eee, #ccc, #eee);
+ /* Shimmering effect gradient */
+  background-size: 400% 400%;
+  border-radius: 4px;
+  animation: shimmer 3s linear infinite;
+}
+.head{
+  display: flex;
+}
+.title2{
+  height: 20px;
+  width: 30%;
+  background: linear-gradient(-45deg, #ccc, #eee, #ccc, #eee);
+ /* Shimmering effect gradient */
+  background-size: 400% 400%;
+  border-radius: 8px;
+  animation: shimmer 3s linear infinite;
+}
+.circle{
+  height: 30px;
+  margin-left: 50px;
+  width: 30px;
+  margin-left: 20px;
+  background: linear-gradient(-45deg, #ccc, #eee, #ccc, #eee);
+ /* Shimmering effect gradient */
+  background-size: 400% 400%;
+  border-radius: 10000px;
+  animation: shimmer 3s linear infinite;
+}
+.feature{
+  height: 20px;
+  margin: 8px 0;
+  width: 50%;
+  background: linear-gradient(-45deg, #ccc, #eee, #ccc, #eee);
+ /* Shimmering effect gradient */
+  background-size: 400% 400%;
+  border-radius: 4px;
+  animation: shimmer 3s linear infinite;
+}
+
+@keyframes shimmer {
+  0% {
+      background-position: 200% 0;
   }
-  
-  .preloader {
-    width: 100px;
-    height: 100px;
-    position: relative;
+  100% {
+      background-position: -200% 0;
   }
-  .preloader-name {
-    font-size: 32px;
-    font-weight: bold;    
-    color: #3498db;
-    margin-top: 10px;
-  }
-  .loader {
-    width: 100px;
-    height: 100px;
-    border: 8px solid transparent;
-    border-top-color: #3498db;
-    border-radius: 50%;
-    animation: spin 1.5s linear infinite;
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
-  
+}
