--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,17 @@
   border-radius: 8px;
   animation: shimmer 3s linear infinite;
 }
+
+
+@media (min-width: 768px) and (max-width: 1023px) {
+   .tablet{
+    display:none;
+   }
+
+}
+
+@media (max-width: 767px) {
+    .mobile{
+      display:none;
+    }
+}
