--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,9 @@
   border-radius: 8px;
   animation: shimmer 3s linear infinite;
 }
+.mobdis{
+  display: none;
+}
 
 
 @media (min-width: 768px) and (max-width: 1023px) {
@@ -69,11 +72,15 @@
   }
 }
 
+
 @media (max-width: 767px) {
     .mobile{
       display:none;
     }
     .load{
       width: 30%;
+    }
+    .mobdis{
+      display: block;
     }
 }
